# wikipedia-dlt-clickhouse-rill

./: .gitignore  ARCHITECTURE.md  INCREMENTAL_LOADING.md  QUICK_START.md  README.md  check_databases.py  main.py  pyproject.toml  run_incremental_pipeline.py  run_pipeline.py  run_simple_incremental.py  status  uuid
.claude/: settings.local.json
.dlt/: config.toml  secrets.toml
SQLs/: query-wikipedia.py  wikimedia-parquet.sql  wikipedia-duckdb.sql
data/default/: data_engineering_keywords  wikistat_data_engineering
helpers/: clickhouse-shell-download.sh  links.txt  list-wikifiles.sh
pipeline/: __init__.py  clickhouse_utils.py  config.py  wikipedia_pipeline.py  wikipedia_pipeline_incremental.py  wikipedia_pipeline_simple_incremental.py
sql/: 01_create_tables.sql  02_create_keywords.sql  03_insert_keywords.sql  04_load_filtered_pageviews.sql
