[project]
name = "dlt-clickhouse-rill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "duckdb>=1.4.1",
    "dlt[clickhouse]>=0.4.0",
    "clickhouse-driver>=0.2.6",
    "python-dotenv>=1.0.0",
]
